syntax = "proto3";

package proto;

option go_package = "rusve/proto";

import "users.proto";

message PostId {
    string postId = 1;
    string userId = 2;
}

message Post {
  string id = 1;
  string created = 2;
  string updated = 3;
  optional string deleted = 4;

  string userId = 5;
  string title = 6;
  string content = 7;

  User user = 8;
}

